# AI-Listing-Writer

./: .env.example  CHANGELOG.md  Dockerfile  Makefile  README.md  bot.py  docker-compose.yml  fix_lint.py  pyproject.toml  requirements.txt  ruff.toml
app/: __init__.py  ab_test_advisor.py  ab_testing.py  ai_engine.py  analytics.py  brand_voice.py  bulk.py  bundle_recommender.py  category_optimizer.py  cli.py  competitor.py  competitor_analyzer.py  compliance.py  config.py  conversion_copy.py  cross_platform.py  customer_qa.py  export.py  fulfillment_advisor.py  hijack_detector.py  history.py  image_optimizer.py  keyword_cannibalization.py  keywords.py  listing_diff.py  listing_forensics.py  listing_grader.py  listing_health.py  listing_scheduler.py  listing_versioning.py  localization.py  marketplace_trends.py  migration.py  performance_predictor.py  platforms.py  pricing_advisor.py  profit_calculator.py  quality_score.py  readability.py  return_estimator.py  (+12 more)
tests/: test_ab_test_advisor.py  test_ab_testing.py  test_analytics.py  test_bot.py  test_brand_voice.py  test_bulk.py  test_bundle_recommender.py  test_category_optimizer.py  test_competitor.py  test_competitor_analyzer.py  test_compliance.py  test_conversion_copy.py  test_cross_platform.py  test_customer_qa.py  test_export.py  test_fulfillment_advisor.py  test_hijack_detector.py  test_image_optimizer.py  test_keyword_cannibalization.py  test_keywords.py  test_listing_diff.py  test_listing_forensics.py  test_listing_grader.py  test_listing_health.py  test_listing_scheduler.py  test_listing_versioning.py  (+21 more)
(+2 files in other folders)
