[project]
name = "ai-listing-writer"
version = "6.0.0"
description = "AI-powered multi-platform e-commerce listing generator with SEO optimization, health monitoring, trend analysis, and cross-platform migration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["ecommerce", "listing", "ai", "seo", "amazon", "shopee", "ebay", "etsy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "python-telegram-bot>=20.0",
    "openai>=1.0",
    "redis>=4.0",
    "aiohttp>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
